convertedToMDAPI/objects/TeamMember__c.object
<CustomObject>
    <label>Team Member</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Team #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>AccountTeamMembers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AlertEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert via Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AlertSMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Alert via SMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>AccountTeamMembers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EmailCustom__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Email (Custom)</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>IsApprover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCellProcessing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cell Processing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPrescriber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prescriber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubmitter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MobileCustom__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Mobile (Custom)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhoneCustom__c</fullName>
        <isCaseInsensitiveDeterministicEncryptionEnabled>false</isCaseInsensitiveDeterministicEncryptionEnabled>
        <isCaseSensitiveDeterministicEncryptionEnabled>false</isCaseSensitiveDeterministicEncryptionEnabled>
        <label>Phone (Custom)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <formula>IF(IsPrescriber__c,&quot;Prescriber;&quot;,&quot; &quot;)&amp;
IF(IsApprover__c,&quot;Approver;&quot;,&quot; &quot;)&amp;
IF(IsSubmitter__c,&quot;Submitter;&quot;,&quot; &quot;)&amp;
IF(IsCellProcessing__c,&quot;CellProcessing&quot;,&quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Roles</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UseContactDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check to use contact details</inlineHelpText>
        <label>Use Contact Details</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>